fix: update navigation labels and links to reflect personal branding

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,7 +7,7 @@ hero:
   tagline: A Product Frontend Engineer based in A Coruña (Spain)
   actions:
     - text: About me
-      link: /about/
+      link: /about/me
     - text: Work together
       link: /work/
       variant: minimal
