--- a/src/content/docs/about/values.mdx
+++ b/src/content/docs/about/values.mdx
@@ -1,4 +1,5 @@
 ---
 title: Mis valores
 description: Los principios fundamentales que guían mis decisiones y dan forma a mi trabajo en ingeniería de software.
+slug: about/valores
 ---
