--- a/src/content/docs/getting-started/contributing.mdx
+++ b/src/content/docs/getting-started/contributing.mdx
@@ -1,6 +1,7 @@
 ---
 title: Contribuir
 description: Cómo contribuir a esta web
+slug: empezar/contribuir
 ---
 
 ¿Has encontrado alguna errata? ¿Crees que hay algo que se puede expresar de forma distinta a como lo he hecho? Estoy abiertos a cambios y a nuevas ideas. Puedes hacerlo de varias formas:
