--- a/src/content/docs/getting-started/first-steps.mdx
+++ b/src/content/docs/getting-started/first-steps.mdx
@@ -24,8 +24,13 @@ La web está divida en varias secciones, cada una de ellas centrada en un tema e
 <CardGrid>
     <LinkCard
         title="About"
-        href="/about/me"
+        href="/about/sobre-mi"
         description="Conoce un poco más sobre mi"
+    />
+    <LinkCard
+        title="Frontend Handbook"
+        href="/frontend-handbook/introduccion"
+        description="Un manual opinionado para Product Frontend Engineers"
     />
 </CardGrid>
 
