feat: add section on the purpose of public sharing in 'first steps' documentation

--- a/src/content/docs/getting-started/first-steps.mdx
+++ b/src/content/docs/getting-started/first-steps.mdx
@@ -39,3 +39,11 @@ La web está divida en varias secciones, cada una de ellas centrada en un tema e
 En el caso de que haya alguna conexión entre conceptos o crea conveniente que hay una dependencia, enlazaré a la página correspondiente.
 
 De todas formas, la he estructurado de tal forma que tenga sentido leerla en orden, por lo que si decides leerla de principio a fin, no tendrás ningún problema.
+
+## Propósito
+
+Esta web tiene principalmente dos objetivos:
+
+**Seguir aprendiendo**. No hay mejor forma de aprender algo que intentar enseñarlo a otra persona. Al escribir sobre un tema, tengo que asegurarme de que lo entiendo lo suficientemente bien como para explicarlo con claridad.
+
+**Compromiso**. Cuando haces algo público, te sientes más comprometido con ello. Aquí hablo de algunos de mis principios y valores en el mundo del desarrollo de software, y quiero que esta web sea un reflejo de ellos.
