feat: rename section header from '¿Cómo se estructura esta web?' to 'Estructura' in first steps documentation

--- a/src/content/docs/getting-started/first-steps.mdx
+++ b/src/content/docs/getting-started/first-steps.mdx
@@ -17,7 +17,7 @@ Esta web está inspirada en la documentación de una librería o un framework. E
 
 En cuanto al diseño, he cogido inspiración de [shadcn/ui](https://ui.shadcn.com/docs), una de la más limpias y bonitas que me he encontrado hasta ahora.
 
-## ¿Cómo se estructura esta web?
+## Estructura
 
 La web está divida en varias secciones, cada una de ellas centrada en un tema en específico:
 
