feat: add 'Proyectos' link card to first steps documentation

--- a/src/content/docs/getting-started/first-steps.mdx
+++ b/src/content/docs/getting-started/first-steps.mdx
@@ -28,6 +28,11 @@ La web está divida en varias secciones, cada una de ellas centrada en un tema e
         description="Conoce un poco más sobre mi"
     />
     <LinkCard
+        title="Proyectos"
+        href="/proyectos/reactioning"
+        description="Side projects en los que he trabajado"
+    />
+    <LinkCard
         title="Frontend Handbook"
         href="/frontend-handbook/introduccion"
         description="Un manual opinionado para Product Frontend Engineers"
