feat: add image for frontend engineer pillars and update reference in introduction

--- a/src/content/docs/frontend-handbook/introduction.mdx
+++ b/src/content/docs/frontend-handbook/introduction.mdx
@@ -49,7 +49,7 @@ Si estos valores resuenan contigo es una buena señal, porque posiblemente el re
 
 Más allá del propósito y de los valores, hay un concepto clave y son los tres pilares que sostienen todo tu trabajo. Estos son **ingeniería, producto y diseño**. Mucha gente se intenta sostener solo en el primero, pero rápidamente acaban siendo prescindibles o sustituidos o pierden las ganas de seguir construyendo porque no entienden muy bien lo que están haciendo.
 
-![Los tres pilares que sostienen el trabajo de un Product Frontend Engineer.](/images/three-pilars-frontend-engineer.png)
+![Los tres pilares que sostienen el trabajo de un Product Frontend Engineer.](./__asets__/three-pilars-frontend-engineer.png)
 
 La aparición de producto y diseño como disciplinas a desarrollar no significa que perdamos de vista las habilidades técnicas. Estas siguen siendo las más importantes y las más valiosas que tenemos Las otras dos lo complementan y te diferencian del resto, convirtiéndote en un rol imprescindible gracias a tu versatilidad y tu posibilidad de conectar puntos entre esas tres áreas.
 
