feat: add purpose documentation and update index links

--- a/src/content/docs/getting-started/purpose.mdx
+++ b/src/content/docs/getting-started/purpose.mdx
@@ -1,6 +1,6 @@
 ---
-title: Primeros pasos
-slug: empezar/primeros-pasos
+title: Propósito
+slug: empezar/proposito
 sidebar:
   order: 1
 ---
@@ -45,10 +45,16 @@ En el caso de que haya alguna conexión entre conceptos o crea conveniente que h
 
 De todas formas, la he estructurado de tal forma que tenga sentido leerla en orden, por lo que si decides leerla de principio a fin, no tendrás ningún problema.
 
-## Propósito
+## Objetivos
 
 Esta web tiene principalmente dos objetivos:
 
 **Seguir aprendiendo**. No hay mejor forma de aprender algo que intentar enseñarlo a otra persona. Al escribir sobre un tema, tengo que asegurarme de que lo entiendo lo suficientemente bien como para explicarlo con claridad.
 
 **Compromiso**. Cuando haces algo público, te sientes más comprometido con ello. Aquí hablo de algunos de mis principios y valores en el mundo del desarrollo de software, y quiero que esta web sea un reflejo de ellos.
+
+## ¿Por qué no un blog?
+
+Hoy en día, la mayoría de las plataformas de publicación de contenido (ya sean blogs, podcasts, canales de YouTube, ...) dependen de algoritmos para posicionar contenido. Enfocar todo esto como una documentación me permite centrarme en la calidad del contenido, no en la cantidad o en la forma en la que se presenta.
+
+Quiero compartir la información de la forma que a mi me parece que es útil, no de la forma que a un algoritmo le parezca que va a tener más impacto. Quiero poder actualizar y corregir sin tener que crear un nuevo artículo repitiendo mucha información solo para que Google vea que tengo más páginas indexadas.
