--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -6,10 +6,10 @@ hero:
   title: Hi! I'm Juan
   tagline: A Product Frontend Engineer based in A Coruña (Spain)
   actions:
-    - text: About me
-      link: /about/me
-    - text: Work together
-      link: /work/
+    - text: Sobre mi
+      link: /about/sobre-mi
+    - text: Propósito
+      link: /empezar/proposito
       variant: minimal
 ---
 
