feat: update slugs and add sidebar order for documentation structure

--- a/src/content/docs/frontend-handbook/introduction.mdx
+++ b/src/content/docs/frontend-handbook/introduction.mdx
@@ -1,7 +1,9 @@
 ---
 title: Introducción
 description: Principios y fundamentos del Product Frontend Engineer
-slug: frontend-handbook/introduccion
+slug: frontend-handbook
+sidebar:
+  order: 1
 ---
 
 Antes de empezar, es importante que te familiarices con los pilares, con los cimientos, que rigen este _handbook_. Y es que mi objetivo no es que sea la mejor guía o la más completa que puedas encontrar. Mi objetivo es que si compartimos los mismos valores, seamos capaces de encontrar la mejor manera de construir productos digitales de calidad y que la gente realmente ame usar.
