--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,7 +7,7 @@ hero:
   tagline: A Product Frontend Engineer based in A Coruña (Spain)
   actions:
     - text: Sobre mi
-      link: /about/sobre-mi
+      link: /about
     - text: Propósito
       link: /empezar/proposito
       variant: minimal
