feat: add more frontend handbook chapters

--- a/src/content/docs/frontend-handbook/engineering.mdx
+++ b/src/content/docs/frontend-handbook/engineering.mdx
@@ -8,7 +8,7 @@ sidebar:
 
 La ingeniería es la disciplina que da solución a problemas del mundo real. Como ingenieros de software, una de nuestras principales responsabilidades es la de construir productos que solventen dificultades, haciendo la vida de las personas más sencilla y agradable.
 
-![Ingeniería como el pilar fundamental](/images/engineering-pillar.png)
+![Ingeniería como el pilar fundamental](./__assets__/engineering-pillar.png)
 
 Vamos a ver algunos principios fundamentales para aumentar la calidad de lo que producimos a la par que reducimos los tiempos de entrega.
 
@@ -32,7 +32,7 @@ Seguro que se te ocurren mil sitios donde aplicar esta práctica tan antigua com
 
 Cuando tengas que empezar un nuevo proyecto, **sal de tu zona de confort con alguna tecnología**. ¿Qué tal un nuevo framework de React? ¿Igual Tailwind tiene más sentido del que creía? ¿Podría reemplazar Redux por Zustand?
 
-![Mutaciones en el genoma de tus proyectos](/images/genome-mutations.png)
+![Mutaciones en el genoma de tus proyectos](./__assets__/genome-mutations.png)
 
 No olvides que no trabajas solo. No tomes la decisión en solitario y consulta a quienes lo hayan probado. La experiencia es un grado.
 
