feat: translate to english

--- a/src/content/docs/about/me.mdx
+++ b/src/content/docs/about/me.mdx
@@ -1,5 +1,42 @@
 ---
-title: Sobre mi
-description: Una breve historia sobre mi
-slug: about
+title: Sobre mí
+description: Una breve historia sobre mí
 ---
+
+¡Hola! Soy Juan, Product Frontend Engineer en Inditex. Mi misión aquí es proporcionar soluciones frontend para la herramienta de gestión de catálogo, una de las principales herramientas del e-commerce de Inditex.
+
+## Principales logros
+
+- **Zara Tech**: Ganar el [Inditex Young Technology Talent Program](https://www.zaratalent.com/es/tech/) me permitió empezar a trabajar en la empresa (más de 3000 participantes, 20 ganadores).
+- **I National Cyber League**: Finalista en la [1ª National Cyberleague](https://www.um.es/web/informatica/inicio/-/asset_publisher/9oPl8OoMB0qA/content/final-de-la-i-national-cyberleague) organizada por la Guardia Civil.
+
+## Proyectos de los que estoy más orgulloso
+
+- **Bot de vacunación COVID**: Bot de Twitter que desarrollé durante la pandemia de COVID-19 para informar sobre el estado de la vacunación en España ([X](https://twitter.com/CovidVacunaES) / [GitHub](https://github.com/juanoa/vacunas-bot))
+- **Share the gym**: Crea rutinas de gimnasio y compártelas con tus amigos ([GitHub](https://github.com/juanoa/share-the-gym) / [Web](https://share-the-gym.vercel.app/))
+- **Package-lock beautify**: Web para entender cómo funciona un package-lock.json subiendo el tuyo ([GitHub](https://github.com/juanoa/package-lock-beautify) / [Web](https://package-lock-beautify.vercel.app/))
+
+## Experiencia
+
+- **Inditex** (Oct. 2021 - Presente). [Inditex](https://www.inditex.com/) es un líder mundial en retail de moda conocido por su diverso portafolio de marcas, incluyendo [Zara](https://www.zara.com/). He ayudado a construir la herramienta de gestión de productos y catálogos para los e-commerce de la compañía.
+- **PcComponentes** (Feb. 2020 - Mar. 2020). [PcComponentes](https://www.pccomponentes.com/) es un e-commerce español líder especializado en productos electrónicos y tecnológicos. Trabajo backend en la tienda online usando PHP y Symphony.
+
+## Algunas cosas personales
+
+Algunos datos básicos:
+
+- Nací el **25 de mayo de 1999**, en **Alicante** (España), pero me mudé a Murcia unos años después.
+- Desde pequeño, supe que quería seguir una carrera en ingeniería, específicamente en **informática**.
+- Después de estudiar Informática, fui aceptado en el programa de jóvenes talentos de Inditex y me mudé a A Coruña (Galicia, España), **uno de los lugares donde me he sentido más en casa**.
+- Mudarme a A Coruña me enseñó que **salir de mi zona de confort** da miedo, pero los resultados merecen la pena.
+- Durante los últimos años, me he vuelto muy activo. Escalo, corro y hago surf.
+- Desde que empecé a surfear, **el océano** se ha convertido en mi lugar favorito del mundo.
+- Hace 1 año, compré un **piano**, y desde entonces, he disfrutado aún más de la música.
+- Me gusta establecer nuevos retos y metas para mí mismo de vez en cuando para seguir creciendo tanto personal como profesionalmente.
+- A veces me cuesta creer los logros que he conseguido, pero creo que eso es mejor que tener un ego sobredimensionado.
+- Soy adicto a **Notion**; gestiono toda mi vida desde ahí.
+
+Algunos proyectos:
+
+- Mientras estaba en la universidad, **cofundé una marca de botellas de agua reutilizables** con dos compañeros de clase. Nos encargamos de todo: compras, logística, página web, envíos, marketing y más. Fue una experiencia increíble.
+- Solía **escribir sobre mejores prácticas de frontend** en mi blog de [Medium](https://medium.com/@juanoa)
