feat: simplify purpose section by removing specific links and descriptions

--- a/src/content/docs/getting-started/purpose.mdx
+++ b/src/content/docs/getting-started/purpose.mdx
@@ -18,25 +18,7 @@ En cuanto al diseño, he cogido inspiración de [shadcn/ui](https://ui.shadcn.co
 
 ## Estructura
 
-La web está divida en varias secciones, cada una de ellas centrada en un tema en específico:
-
-<CardGrid>
-    <LinkCard
-        title="About"
-        href="/about/sobre-mi"
-        description="Conoce un poco más sobre mi"
-    />
-    <LinkCard
-        title="Proyectos"
-        href="/proyectos/reactioning"
-        description="Side projects en los que he trabajado"
-    />
-    <LinkCard
-        title="Frontend Handbook"
-        href="/frontend-handbook/introduccion"
-        description="Un manual opinionado para Product Frontend Engineers"
-    />
-</CardGrid>
+La web está divida en varias secciones, cada una de ellas centrada en un tema en específico.
 
 <Aside>La documentación no sigue ningún orden. Se puede consultar cualquier página en cualquier momento.</Aside>
 
