feat: update title

--- a/src/content/docs/about/me.mdx
+++ b/src/content/docs/about/me.mdx
@@ -21,7 +21,7 @@ description: Una breve historia sobre mí
 - **Inditex** (Oct. 2021 - Presente). [Inditex](https://www.inditex.com/) es un líder mundial en retail de moda conocido por su diverso portafolio de marcas, incluyendo [Zara](https://www.zara.com/). He ayudado a construir la herramienta de gestión de productos y catálogos para los e-commerce de la compañía.
 - **PcComponentes** (Feb. 2020 - Mar. 2020). [PcComponentes](https://www.pccomponentes.com/) es un e-commerce español líder especializado en productos electrónicos y tecnológicos. Trabajo backend en la tienda online usando PHP y Symphony.
 
-## Algunas cosas personales
+## Más sobre mi
 
 Algunos datos básicos:
 
