feat: update links and enhance personal narrative in about section

--- a/src/content/docs/en/about/me.mdx
+++ b/src/content/docs/en/about/me.mdx
@@ -1,42 +1,37 @@
 ---
 title: About me
-description: A brief history about me
+description: A brief story about myself
 ---
 
-Hi! I’m Juan, Product frontend engineer at Inditex, one of the largest companies in Spain (you may know it by brands like Zara or Massimo Dutti). My mission there is to provide frontend solutions for the catalog tool, one of the main tools of the Inditex e-commerce.
+Hello! I'm Juan, Product Frontend Engineer at Inditex, where my mission is to provide frontend solutions for the catalog management tool, one of the main tools in the company's e-commerce.
 
-## Main Achievements
+## Main achievements
 
 - **Zara Tech**: Winning the [Inditex Young Technology Talent Program](https://www.zaratalent.com/es/tech/) allowed me to start working at the company (over 3000 participants, 20 winners).
-- **I National Cyber League**: Finalist in the [1st National Cyberleague](https://www.um.es/web/informatica/inicio/-/asset_publisher/9oPl8OoMB0qA/content/final-de-la-i-national-cyberleague) organized by the Guardia Civil (*one of the two national law enforcement agencies of Spain*)
+- **I National Cyber League**: Finalist in the [1st National Cyberleague](https://www.um.es/web/informatica/inicio/-/asset_publisher/9oPl8OoMB0qA/content/final-de-la-i-national-cyberleague) organized by the Guardia Civil.
 
-## Most Prideful Builds
+## Projects I'm most proud of
 
-- **COVID vaccination bot**: I developed a Twitter bot during the COVID-19 pandemic to inform about the vaccination status in my country ([X](https://twitter.com/CovidVacunaES) / [GitHub](https://github.com/juanoa/vacunas-bot))
-- **Share the gym**: Create Gym Routines and share it with your friends ([GitHub](https://github.com/juanoa/share-the-gym) / [Web](https://share-the-gym.vercel.app/))
-- **Package-lock beautify**: Web for understand how a package-lock.json works uploading yours ([GitHub](https://github.com/juanoa/package-lock-beautify) / [Web](https://package-lock-beautify.vercel.app/))
+- **COVID vaccination bot**: Twitter bot I developed during the COVID-19 pandemic to report on the vaccination status in Spain ([X](https://twitter.com/CovidVacunaES) / [GitHub](https://github.com/juanoa/vacunas-bot))
+- **Wateralo**: While in university, I co-founded a reusable water bottle brand with two classmates. We handled everything: purchasing, logistics, website, shipping, marketing, and more. It was an incredible experience.
+- **Share the gym**: Create gym routines and share them with your friends ([GitHub](https://github.com/juanoa/share-the-gym) / [Web](https://share-the-gym.vercel.app/))
+- **Package-lock beautify**: Web app to understand how a package-lock.json works by uploading yours ([GitHub](https://github.com/juanoa/package-lock-beautify) / [Web](https://package-lock-beautify.vercel.app/))
 
 ## Experience
 
-- **Inditex** (Oct. 2021 - Present). [Inditex](https://www.inditex.com/) is a global fashion retail leader known for its diverse brand portfolio, including [Zara](https://www.zara.com/). I helped build the product and catalog management tool for the company's e-commerces.
-- **PcComponentes** (Feb. 2020 - Mar. 2020). [PcComponentes](https://www.pccomponentes.com/) is a leading Spanish e-commerce specializing in electronics and technology products. Backend work in the online store using PHP and Symphony.
+- **Inditex** (Oct. 2021 - Present). [Inditex](https://www.inditex.com/) is a global fashion retail leader known for its diverse portfolio of brands, including [Zara](https://www.zara.com/). I've helped build the product and catalog management tool for the company's e-commerce platforms.
+- **PcComponentes** (Feb. 2020 - Mar. 2020). [PcComponentes](https://www.pccomponentes.com/) is a leading Spanish e-commerce specialized in electronic and technological products. Backend work on the online store using PHP and Symphony.
 
-## Some personal stuff
+## More about me
 
-Some basics:
+Some basic facts:
 
-- I was born on **May 25, 1999**, in **Alicante** (Spain), but I moved to Murcia a few years later.
+- I was born on **May 25, 1999**, in **Alicante** (Spain), but moved to Murcia a few years later.
 - From a young age, I knew I wanted to pursue a career in engineering, specifically in **computer science**.
-- After studying Computer Science, I was accepted into Inditex's young talent program and moved to A Coruña (Galicia, Spain), **one of the places where I've felt most at home**.
+- After studying Computer Engineering, I was accepted into Inditex's young talent program and moved to A Coruña (Galicia, Spain), **where I feel at home**.
 - Moving to A Coruña taught me that **stepping out of my comfort zone** is scary, but the results are worth it.
-- For the past few years, I've become very active. I climb, run, and surfing.
+- Over the last few years, I've become very active. I climb, run, and surf.
 - Since I started surfing, **the ocean** has become my favorite place in the world.
-- One year ago, I bought a **piano**, and since then, I've enjoyed music even more.
-- I like setting new challenges and goals for myself from time to time to keep growing both personally and professionally.
-- Sometimes I find it hard to believe the achievements I've accomplished, but I think that's better than having an oversized ego.
-- I'm addicted to **Notion**; I manage my entire life from there.
-
-Some projects:
-
-- While I was in university, I **co-founded a reusable water bottle brand** with two classmates. We handled everything: purchasing, logistics, website, shipping, marketing, and more. It was an incredible experience.
-- I used to **write about frontend best practices** on my [Medium](https://medium.com/@juanoa) blog
+- A year ago, I bought a **piano**, and since then, I enjoy music even more.
+- I like setting new challenges and goals from time to time to keep growing both personally and professionally.
+- I'm addicted to **Notion**, I manage my entire life from there.
