--- a/src/content/docs/en/about/values.mdx
+++ b/src/content/docs/en/about/values.mdx
@@ -3,38 +3,35 @@ title: My values
 description: The fundamental principles that guide my decisions and shape my work in software engineering.
 ---
 
-### What gets me pumped
+## What motivates me
 
-- **Product is the key**. If I am not 100% aligned with the product I feel I am not contributing to society. I would like to work in products that I can be proud of.
-- **Multidisciplinary** environment, where, despite each of us having our own strengths, we can share our opinions on different areas such as design or business.
-- I appreciate when the engineering team has **direct interaction with users and the business**, without impenetrable intermediaries like Product Owners or Product Managers.
-- I enjoy **bootstrapping projects**, applying the Pareto principle to quickly achieve 80% of the results with 20% of the effort.
-- **Quality is a must**. It’s not enough to just solve a problem; the solution must be scalable and understandable by other team members.
+- **Product is key**. I need to believe in the product I'm building and how it can positively impact society.
+- A **multidisciplinary** environment where, despite everyone having their own strengths, we can share our opinions in different areas like design or business.
+- I value when the engineering team can **interact with users and business** without intermediaries.
+- I love **starting projects from scratch**, applying the Pareto principle to quickly achieve 80% of results with 20% of effort.
 
-### What gets me disappointed
+## What disappoints me
 
-- No hierarchies and **unnecessary bureaucracy**, this overwhelm me.
-- Over-engineering, spending more time on implementation than on solving the actual problem, and **teams that prioritize technical solutions over functional** ones are things I try to avoid.
+- Hierarchies and **unnecessary bureaucracy**. It overwhelms me.
+- Over-engineering, spending more time on implementation than solving the actual problem, and **teams that prioritize technical solutions over functional ones**.
 
-### Strengths
+## Strengths
 
-- I excel at **understanding the business and its key pain points**, translating them into solutions that address real problems.
-- I’m skilled at **translating business language into code**, making it more maintainable and scalable. *If someone from the business side understood programming, they should be able to understand our code*.
+- I excel at **understanding the business and its main pain points**, translating them into solutions that address real problems.
+- I'm good at **translating business language into code**, making it more maintainable and scalable. *If someone from business understood programming, they should be able to understand our code*.
 
-### Improvement points
+## Areas for improvement
 
-- Due to my multidisciplinary approach, I haven't dedicated 100% of my time to becoming the best technically. Instead, I've chosen to also focus on areas like design, product, complex problem-solving, and communication. As a result, **I may never be the top developer** on the team.
+- Due to my multidisciplinary approach, I haven't dedicated 100% of my time to being the best technically. Instead, I've also chosen to focus on areas like design, product, complex problem-solving, and communication. In other words, **I may never be the best developer** on the team.
 
 ## My vision
 
-I believe that work is **more than just earning a wage**. It's about contributing to society, helping others with their problems, and personal growth. Work is about building a craft and doing things with mastery, as Rosalía says (*sorry, it’s in Spanish*):
+I believe work is **more than earning a salary**. It's about contributing to society, helping communities with their problems and helping them grow. As Rosalía says, "craft and mastery":
 
-https://x.com/jlantunez/status/1740745121375863106
+[José Luis Antúnez on X](https://x.com/jlantunez/status/1740745121375863106)
 
-I think that good products can change our lives, so I would like to help build game-changing products that I can be proud of. 
+I think good products can change our lives, and I would be proud to help build revolutionary products.
 
-Exponential Fellowship can help me get closer to those companies dealing with the early stages of their product, and learn to craft software in highly uncertain environments. I love Spain, and although the startup sector is gaining more relevance every day, I believe it needs a little push to compete and reach the level of other countries like the United States. **I would love to contribute to making this country start exporting digital products and services** that the entire nation can be proud of.
+Lastly, one of my favorite TV commercials that summarizes my worldview quite well:
 
-*Lastly, one of my favorite TV ads that summarizes my worldview quite well*
-
-https://www.youtube.com/watch?v=tjgtLSHhTPg
+[Apple - Here's to the Crazy Ones](https://www.youtube.com/watch?v=tjgtLSHhTPg)
