--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -7,9 +7,9 @@ hero:
   tagline: A Product Frontend Engineer based in A Coruña (Spain)
   actions:
     - text: Sobre mi
-      link: /about
+      link: /about/me
     - text: Propósito
-      link: /empezar/proposito
+      link: /getting-started/purpose
       variant: minimal
 ---
 
