--- a/src/content/docs/about/me.mdx
+++ b/src/content/docs/about/me.mdx
@@ -3,7 +3,7 @@ title: Sobre mí
 description: Una breve historia sobre mí
 ---
 
-¡Hola! Soy Juan, Product Frontend Engineer en Inditex. Mi misión aquí es proporcionar soluciones frontend para la herramienta de gestión de catálogo, una de las principales herramientas del e-commerce de Inditex.
+¡Hola! Soy Juan, Product Frontend Engineer en Inditex, donde mi misión es proporcionar soluciones frontend para la herramienta de gestión de catálogo, una de las principales herramientas del e-commerce de la compañía.
 
 ## Principales logros
 
@@ -13,6 +13,7 @@ description: Una breve historia sobre mí
 ## Proyectos de los que estoy más orgulloso
 
 - **Bot de vacunación COVID**: Bot de Twitter que desarrollé durante la pandemia de COVID-19 para informar sobre el estado de la vacunación en España ([X](https://twitter.com/CovidVacunaES) / [GitHub](https://github.com/juanoa/vacunas-bot))
+- **Wateralo**: Mientras estaba en la universidad, cofundé una marca de botellas de agua reutilizables con dos compañeros de clase. Nos encargamos de todo: compras, logística, página web, envíos, marketing y más. Fue una experiencia increíble.
 - **Share the gym**: Crea rutinas de gimnasio y compártelas con tus amigos ([GitHub](https://github.com/juanoa/share-the-gym) / [Web](https://share-the-gym.vercel.app/))
 - **Package-lock beautify**: Web para entender cómo funciona un package-lock.json subiendo el tuyo ([GitHub](https://github.com/juanoa/package-lock-beautify) / [Web](https://package-lock-beautify.vercel.app/))
 
@@ -27,16 +28,10 @@ Algunos datos básicos:
 
 - Nací el **25 de mayo de 1999**, en **Alicante** (España), pero me mudé a Murcia unos años después.
 - Desde pequeño, supe que quería seguir una carrera en ingeniería, específicamente en **informática**.
-- Después de estudiar Informática, fui aceptado en el programa de jóvenes talentos de Inditex y me mudé a A Coruña (Galicia, España), **uno de los lugares donde me he sentido más en casa**.
+- Después de estudiar Ingeniería Informática, fui aceptado en el programa de jóvenes talentos de Inditex y me mudé a A Coruña (Galicia, España), **donde me siento como en casa**.
 - Mudarme a A Coruña me enseñó que **salir de mi zona de confort** da miedo, pero los resultados merecen la pena.
 - Durante los últimos años, me he vuelto muy activo. Escalo, corro y hago surf.
-- Desde que empecé a surfear, **el océano** se ha convertido en mi lugar favorito del mundo.
-- Hace 1 año, compré un **piano**, y desde entonces, he disfrutado aún más de la música.
-- Me gusta establecer nuevos retos y metas para mí mismo de vez en cuando para seguir creciendo tanto personal como profesionalmente.
-- A veces me cuesta creer los logros que he conseguido, pero creo que eso es mejor que tener un ego sobredimensionado.
-- Soy adicto a **Notion**; gestiono toda mi vida desde ahí.
-
-Algunos proyectos:
-
-- Mientras estaba en la universidad, **cofundé una marca de botellas de agua reutilizables** con dos compañeros de clase. Nos encargamos de todo: compras, logística, página web, envíos, marketing y más. Fue una experiencia increíble.
-- Solía **escribir sobre mejores prácticas de frontend** en mi blog de [Medium](https://medium.com/@juanoa)
+- Desde que empecé a surfear, **el mar** se ha convertido en mi lugar favorito del mundo.
+- Hace 1 año, compré un **piano**, y desde entonces, disfruto aún más de la música.
+- Me gusta establecer nuevos retos y metas de vez en cuando para seguir creciendo tanto personal como profesionalmente.
+- Soy adicto a **Notion**, gestiono toda mi vida desde ahí.
