--- a/src/content/docs/about/values.mdx
+++ b/src/content/docs/about/values.mdx
@@ -5,36 +5,33 @@ description: Los principios fundamentales que guían mis decisiones y dan forma 
 
 ## Lo que me motiva
 
-- **El producto es clave**. Si no estoy 100% alineado con el producto siento que no estoy contribuyendo a la sociedad. Me gustaría trabajar en productos de los que pueda estar orgulloso.
+- **El producto es clave**. Necesito creer en el producto que estoy construyendo y en cómo puede afectar positivamente a la sociedad.
 - Un entorno **multidisciplinar**, donde, a pesar de que cada uno tenga sus propias fortalezas, podamos compartir nuestras opiniones en diferentes áreas como diseño o negocio.
-- Valoro cuando el equipo de ingeniería tiene **interacción directa con usuarios y negocio**, sin intermediarios impenetrables como Product Owners o Product Managers.
-- Disfruto **arrancando proyectos desde cero**, aplicando el principio de Pareto para conseguir rápidamente el 80% de los resultados con el 20% del esfuerzo.
-- **La calidad es imprescindible**. No es suficiente resolver un problema; la solución debe ser escalable y comprensible por otros miembros del equipo.
+- Valoro cuando el equipo de ingeniería puede **interaccionar con usuarios y con el negocio** sin intermediarios.
+- Me encanta **arrancar proyectos desde cero**, aplicando el principio de Pareto para conseguir rápidamente el 80% de los resultados con el 20% del esfuerzo.
 
 ## Lo que me decepciona
 
-- Las jerarquías y **burocracia innecesaria**, esto me abruma.
-- La sobreingeniería, pasar más tiempo en la implementación que en resolver el problema real, y **equipos que priorizan soluciones técnicas sobre las funcionales** son cosas que intento evitar.
+- Las jerarquías y **burocracia innecesaria**. Me abruma.
+- La sobreingeniería, pasar más tiempo en la implementación que en resolver el problema real, y **equipos que priorizan soluciones técnicas sobre las funcionales**.
 
 ## Fortalezas
 
 - Destaco **entendiendo el negocio y sus principales puntos de dolor**, traduciéndolos en soluciones que abordan problemas reales.
-- Soy hábil **traduciendo el lenguaje de negocio a código**, haciéndolo más mantenible y escalable. *Si alguien del lado del negocio entendiera de programación, debería ser capaz de entender nuestro código*.
+- Soy bueno **traduciendo el lenguaje de negocio a código**, haciéndolo más mantenible y escalable. *Si alguien de negocio entendiera de programación, debería ser capaz de entender nuestro código*.
 
 ## Puntos de mejora
 
-- Debido a mi enfoque multidisciplinar, no he dedicado el 100% de mi tiempo a ser el mejor técnicamente. En cambio, he elegido también centrarme en áreas como diseño, producto, resolución de problemas complejos y comunicación. Como resultado, **puede que nunca sea el mejor desarrollador** del equipo.
+- Debido a mi enfoque multidisciplinar, no he dedicado el 100% de mi tiempo a ser el mejor técnicamente. En cambio, he elegido también centrarme en áreas como diseño, producto, resolución de problemas complejos y comunicación. Es decir, **puede que nunca sea el mejor desarrollador** del equipo.
 
 ## Mi visión
 
-Creo que el trabajo es **más que ganar un salario**. Se trata de contribuir a la sociedad, ayudar a otros con sus problemas y crecer personalmente. El trabajo consiste en construir un oficio y hacer las cosas con maestría, como dice Rosalía:
+Creo que el trabajo es **más que ganar un salario**. Se trata de contribuir a la sociedad, ayudar a colectivos con sus problemas y a hacerlos crecer. Como dice Rosalía, "oficio y maestría":
 
-https://x.com/jlantunez/status/1740745121375863106
+[José Luis Antúnez en X](https://x.com/jlantunez/status/1740745121375863106)
 
-Pienso que los buenos productos pueden cambiar nuestras vidas, así que me gustaría ayudar a construir productos revolucionarios de los que pueda estar orgulloso.
+Pienso que los buenos productos pueden cambiar nuestras vidas y estaría orgulloso de poder ayudar a construir productos revolucionarios.
 
-Exponential Fellowship puede ayudarme a acercarme a esas empresas que se encuentran en las primeras etapas de su producto, y aprender a desarrollar software en entornos de alta incertidumbre. Me encanta España, y aunque el sector de las startups está ganando más relevancia cada día, creo que necesita un pequeño empujón para competir y alcanzar el nivel de otros países como Estados Unidos. **Me encantaría contribuir a que este país empiece a exportar productos y servicios digitales** de los que toda la nación pueda estar orgullosa.
+Por último, uno de mis anuncios de televisión favoritos que resume bastante bien mi visión del mundo:
 
-*Por último, uno de mis anuncios de televisión favoritos que resume bastante bien mi visión del mundo*
-
-https://www.youtube.com/watch?v=tjgtLSHhTPg
+[Apple - Here's to the Crazy Ones](https://www.youtube.com/watch?v=tjgtLSHhTPg)
