feat: add books page

--- a/src/content/docs/about/me.mdx
+++ b/src/content/docs/about/me.mdx
@@ -1,6 +1,8 @@
 ---
 title: Sobre mí
 description: Una breve historia sobre mí
+sidebar:
+  order: 1
 ---
 
 ¡Hola! Soy Juan, Product Frontend Engineer en Inditex, donde mi misión es proporcionar soluciones frontend para la herramienta de gestión de catálogo, una de las principales herramientas del e-commerce de la compañía.
