--- a/src/content/docs/about/values.mdx
+++ b/src/content/docs/about/values.mdx
@@ -1,6 +1,8 @@
 ---
 title: Mis valores
 description: Los principios fundamentales que guían mis decisiones y dan forma a mi trabajo en ingeniería de software.
+sidebar:
+  order: 2
 ---
 
 ## Lo que me motiva
