feat: update books

--- a/src/content/docs/about/books.mdx
+++ b/src/content/docs/about/books.mdx
@@ -7,6 +7,8 @@ sidebar:
 
 He pasado gran parte de mi vida leyendo. Retomé este hábito en la universidad, después de un parón de unos cuantos años. Aquí van algunas de mis recomendaciones, tanto de libros más técnicos como de ficción.
 
+Las listas no siguen un orden. Si están aquí es porque tengo un buen recuerdo de ellos.
+
 ## Ficción
 
 - *[Espía y traidor](https://goodreads.com/book/show/46121368.Esp_a_y_traidor_La_mayor_historia_de_espionaje_de_la_Guerra_Fr_a)* de __Ben Macintyre__. Un libro de no ficción que cuenta la historia de Oleg Gordievsky, un espía soviético que trabajó para el MI6 británico durante la Guerra Fría. Es un libro muy bien escrito que atrapa hasta el último momento.
