feat: update books

--- a/src/content/docs/about/books.mdx
+++ b/src/content/docs/about/books.mdx
@@ -12,3 +12,13 @@ Las listas no siguen un orden. Si están aquí es porque tengo un buen recuerdo 
 ## Ficción
 
 - *[Espía y traidor](https://goodreads.com/book/show/46121368.Esp_a_y_traidor_La_mayor_historia_de_espionaje_de_la_Guerra_Fr_a)* de __Ben Macintyre__. Un libro de no ficción que cuenta la historia de Oleg Gordievsky, un espía soviético que trabajó para el MI6 británico durante la Guerra Fría. Es un libro muy bien escrito que atrapa hasta el último momento.
+
+- *[Patria](https://www.goodreads.com/book/show/31842429-patria)* de __Fernando Aramburu__. Simplemente de mis libros favoritos. Relata el conflicto vasco de una forma magistral, con personajes bien construidos y una adaptación a cinematográfica que no desmerece en absoluto.
+
+- *[Proyecto Hail Mary](https://www.goodreads.com/book/show/57299481-proyecto-hail-mary)* de __Andy Weir__. No tuve la suerte de leer *The Martial*, aunque sí de ver la película, pero esta espectacular novela de ciencia ficción se ha hecho un hueco en esta lista.
+
+## No ficción
+
+- *[Sapiens](https://www.goodreads.com/book/show/23692271-sapiens)* de __Yuval Noah Harari__. Un libro que cambió mi forma de ver la historia de la humanidad. Puede que para muchos no sea nada nuevo, mientras que otros dudarán de sus teorías, pero aun así, creo que es un libro que todo el mundo debería de leer.
+
+- *[Momentos estelares de la humanidad](https://www.goodreads.com/book/show/65105.Momentos_estelares_de_la_humanidad)* de __Stefan Zweig__. Me parece un libro de obligada lectura en todos los colegios e institutos. Además, es bastante corto y ameno de leer. No desmerece.
