refctor: calc my age dynamically

--- a/src/content/docs/off-topic/money.mdx
+++ b/src/content/docs/off-topic/money.mdx
@@ -6,6 +6,7 @@ description: Mi relación con el dinero
 import { Aside } from '@astrojs/starlight/components';
 import BudgetChart from "../../../components/off-topic/money/BudgetChart"
 import InvestmentChart from "../../../components/off-topic/money/InvestmentChart"
+import AgeCalculator from "../../../components/off-topic/money/AgeCalculator.astro"
 
 En mi casa, aunque nunca hemos tenido ningún problema económico importante, siempre se han tenido que hacer cuentas para llegar a final de mes.
 
@@ -17,7 +18,7 @@ Aunque siempre fue un tema tabú con el que los adultos siempre se encerraban en
 
 Mi **situación actual** es la siguiente:
 
-- 25 años
+- <AgeCalculator />
 - Ingeniero de software
 - Contrato indefinido en multinacional
 - Viviendo solo de alquiler
