feat: add books recommendations and update money page metadata

--- a/src/content/docs/off-topic/money.mdx
+++ b/src/content/docs/off-topic/money.mdx
@@ -1,6 +1,8 @@
 ---
 title: Dinero
 description: Mi relación con el dinero
+sidebar:
+  order: 1
 ---
 
 import { Aside } from '@astrojs/starlight/components';
