feat: add Acantalidado mention

--- a/src/content/docs/off-topic/books.mdx
+++ b/src/content/docs/off-topic/books.mdx
@@ -22,3 +22,5 @@ Las listas no siguen un orden. Si están aquí es porque tengo un buen recuerdo 
 - *[Sapiens](https://www.goodreads.com/book/show/23692271-sapiens)* de __Yuval Noah Harari__. Un libro que cambió mi forma de ver la historia de la humanidad. Puede que para muchos no sea nada nuevo, mientras que otros dudarán de sus teorías, pero aun así, creo que es un libro que todo el mundo debería de leer.
 
 - *[Momentos estelares de la humanidad](https://www.goodreads.com/book/show/65105.Momentos_estelares_de_la_humanidad)* de __Stefan Zweig__. Me parece un libro de obligada lectura en todos los colegios e institutos. Además, es bastante corto y ameno de leer. No desmerece.
+
+> Mención especial a la editorial [Acantilado](https://www.acantilado.es/), cuyos libros me han ayudado (y me siguen ayudado) a construirme tal y como soy.
