refactor: translate folder structure to spanish

--- a/src/content/docs/about/valores.mdx
+++ b/src/content/docs/about/valores.mdx
@@ -30,10 +30,14 @@ sidebar:
 
 Creo que el trabajo es **más que ganar un salario**. Se trata de contribuir a la sociedad, ayudar a colectivos con sus problemas y a hacerlos crecer. Como dice Rosalía, "oficio y maestría":
 
-[José Luis Antúnez en X](https://x.com/jlantunez/status/1740745121375863106)
+<div style={{display: "flex", justifyContent: "center", width: "100%"}}>
+  <blockquote class="twitter-tweet"><p lang="es" dir="ltr">Oficio. <a href="https://t.co/WVI3SewycY">pic.twitter.com/WVI3SewycY</a></p>&mdash; José Luis Antúnez (@jlantunez) <a href="https://twitter.com/jlantunez/status/1740745121375863106?ref_src=twsrc%5Etfw">December 29, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
 
 Pienso que los buenos productos pueden cambiar nuestras vidas y estaría orgulloso de poder ayudar a construir productos revolucionarios.
 
 Por último, uno de mis anuncios de televisión favoritos que resume bastante bien mi visión del mundo:
 
-[Apple - Here's to the Crazy Ones](https://www.youtube.com/watch?v=tjgtLSHhTPg)
+<div style={{display: "flex", justifyContent: "center", width: "100%", height: "315px"}}>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/tjgtLSHhTPg?si=xAYzE-IArt56nwEq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
