--- a/src/content/docs/about/yo.mdx
+++ b/src/content/docs/about/yo.mdx
@@ -5,7 +5,7 @@ sidebar:
   order: 1
 ---
 
-¡Hola! Soy Juan, Product Frontend Engineer en Inditex, donde mi misión es proporcionar soluciones frontend para la herramienta de gestión de catálogo, una de las principales herramientas del e-commerce de la compañía.
+¡Hola! Soy Juan, Ingeniero de Software en Inditex, donde mi misión es proporcionar soluciones frontend para la herramienta de gestión de catálogo, una de las principales herramientas del e-commerce de la compañía.
 
 ## Principales logros
 
