--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,16 +1,14 @@
 ---
 title: Juan Otálora
-description: A Product Frontend Engineer based in A Coruña (Spain)
+description: Ingeniero de Software expuesto a un mundo complejo
 template: splash
 hero:
-  title: Hi! I'm Juan
-  tagline: A Product Frontend Engineer based in A Coruña (Spain)
+  title: ¡Hola! Soy Juan
+  tagline: Ingeniero de Software expuesto a un mundo complejo
   actions:
     - text: Sobre mi
-      link: /about/me
-    - text: Propósito
-      link: /getting-started/purpose
+      link: /about/yo
+    - text: Empieza por aquí
+      link: /empieza-aqui/proposito
       variant: minimal
 ---
-
-import { Card, CardGrid } from '@astrojs/starlight/components';
