feat: update porpouse

--- a/src/content/docs/empieza-aqui/proposito.mdx
+++ b/src/content/docs/empieza-aqui/proposito.mdx
@@ -20,7 +20,11 @@ En cuanto al diseño, he cogido inspiración de [shadcn/ui](https://ui.shadcn.co
 
 La web está divida en varias secciones, cada una de ellas centrada en un tema en específico.
 
-<Aside>La documentación no sigue ningún orden. Se puede consultar cualquier página en cualquier momento.</Aside>
+<Aside>
+  La documentación no sigue ningún orden. Se puede consultar cualquier página en cualquier momento.
+
+  Sin embargo, los artículos en cada sección están ordenados en lo que a mi parecer es el orden lógico de lectura.
+  </Aside>
 
 En el caso de que haya alguna conexión entre conceptos o crea conveniente que hay una dependencia, enlazaré a la página correspondiente.
 
